--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,4 +1,5 @@
 [{
+  "id":"1",
   "title": "CRUD - Resenha Filme",
   "year": 2023,
   "technologies": ["React", "Node.js", "MongoDB", "Tailwind CSS"],
@@ -8,16 +9,36 @@
   "solution": "Built a scalable e-commerce solution using React for the frontend, Node.js for the backend, and MongoDB for the database. Integrated with Stripe for secure payments."
 },
 {
+  "id":"2",
   "title": "BLACK - BarberShop",
   "year": 2022,
   "technologies": ["HTML", "CSS", "JavaScript", "React"],
   "link": "https://portfolio-example.com",
-  "information": "A personal portfolio website showcasing my projects, skills, and experience.A personal portfolio website showcasing my projects, skills, and experience.A personal portfolio website showcasing my projects, skills, and experience.",
+  "information": "ESSA É A BARBEARIA",
   "problem": "Needed a digital platform to present my work and attract potential clients or employers.",
   "solution": "Designed and developed a responsive, user-friendly portfolio website using React and Tailwind CSS. Optimized for performance and accessibility."
 },
 {
+  "id":"3",
   "title": "Gym 4Girls",
+  "year": 2021,
+  "technologies": ["Vue.js", "Firebase", "Tailwind CSS"],
+  "link": "https://taskmanager-example.com",
+  "information": "A simple and intuitive task management app for users to create, edit, and track their daily tasks.",
+  "problem": "Users needed a way to efficiently organize and manage tasks with real-time updates and cross-device synchronization.",
+  "solution": "Developed a responsive task management app using Vue.js and Firebase for real-time database functionality and user authentication."
+},{
+  "id":"4",
+  "title": "Macrame Bella",
+  "year": 2021,
+  "technologies": ["Vue.js", "Firebase", "Tailwind CSS"],
+  "link": "https://taskmanager-example.com",
+  "information": "A simple and intuitive task management app for users to create, edit, and track their daily tasks.",
+  "problem": "Users needed a way to efficiently organize and manage tasks with real-time updates and cross-device synchronization.",
+  "solution": "Developed a responsive task management app using Vue.js and Firebase for real-time database functionality and user authentication."
+},{
+  "id":"5",
+  "title": "Clean Eating - Challange",
   "year": 2021,
   "technologies": ["Vue.js", "Firebase", "Tailwind CSS"],
   "link": "https://taskmanager-example.com",
